# docnest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PROTOCOL.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  test_nutrition_accuracy.py
.github/: PULL_REQUEST_TEMPLATE.md  main-ruleset.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  issue-labeler.yml  stale.yml  welcome.yml
docforge/: __init__.py  cli.py  embedder.py  exceptions.py  intelligence.py  models.py  normalizer.py  pipeline.py  quantizer.py  reader.py  writer.py
docforge/connectors/: __init__.py  base.py  confluence.py  github.py  jira.py  notion.py
docforge/parsers/: __init__.py  base.py  docx.py  factory.py  html.py  md.py  pdf.py  xlsx.py
docnest/: __init__.py  aggregation.py  chunking.py  cli.py  embedder.py  exceptions.py  intelligence.py  key_numbers.py  keywords.py  models.py  normalizer.py  pipeline.py  quantizer.py  reader.py  writer.py
docnest/connectors/: __init__.py  base.py  confluence.py  github.py  jira.py  notion.py
docnest/parsers/: __init__.py  base.py  csv.py  docx.py  factory.py  html.py  md.py  pdf.py  pymupdf_pdf.py  xlsx.py
docs/: CHARTER.md  SPEC_DOCFORGE_PYPI.md  SPEC_DOCNEST_PYPI.md  TESTING.md  devto_post.md  reddit_posts.md  show_hn.md
docs/adr/: 0000-template.md  0001-sanitise-source-at-write-boundary.md  0002-lightweight-pymupdf-ocr.md  0003-budgeted-table-rendering.md  0004-deterministic-table-aggregation.md  0006-pymupdf-native-table-extraction.md  0007-passage-chunking-for-large-sections.md  0008-deterministic-key-number-enrichment.md  0009-deterministic-keywords-extractive-layer1.md  README.md
docs/retrospectives/: 2026-06-03-rag-eval-retrospective.md
docs/tasks/complex-tables/: 00-DEFINITION-OF-READY.md  01-BA-functional.md  02-DEV-technical.md  03-QA-user.md  04-ROADMAP.md  step1-DESIGN.md  step1-IMPACT-RISK.md  step2-DESIGN.md  step2-IMPACT-RISK.md  step3-DESIGN.md  step4-DESIGN.md  step5-DEFERRED.md
docs/tasks/image-pdf-ocr/: 00-DEFINITION-OF-READY.md  01-BA-functional.md  02-DEV-technical.md  03-QA-user.md  04-ROADMAP.md  05-IMPACT-RISK.md  06-DESIGN.md
docs/tasks/large-pdfs/: 01-BA-functional.md  02-DEV-technical.md  03-QA-user.md  04-ROADMAP.md  step1c-FINDINGS.md
docs/tasks/observers-tax/: FINDINGS.md
docs/tasks/path-compaction/: 00-DEFINITION-OF-READY.md  01-BA-functional.md  02-DEV-technical.md  03-QA-user.md  04-ROADMAP.md  05-IMPACT-RISK.md  06-DESIGN.md
docs/tasks/query-decomposition/: 00-QUEUED.md
docs/tasks/table-aggregation/: 01-BA-functional.md  02-DEV-technical.md  03-QA-user.md  04-ROADMAP.md
eval/: observers_tax_eval.py  observers_tax_phase2.py  rag_accuracy_eval.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_chunking.py  test_cli.py  test_connectors.py  test_csv_parser.py  test_docx_parser.py  test_docx_tables.py  test_embed_batching.py  test_embedder.py  test_html_tables.py  test_intelligence.py  test_key_numbers.py  test_keywords.py  test_normalizer.py  test_parsers.py  test_pipeline.py  test_pymupdf_ocr.py  test_pymupdf_tables.py  test_quantizer.py  test_reader.py  test_source_compaction.py  test_table_rendering.py  test_viewer.py  test_writer.py
tests/fixtures/: .gitkeep  README.md  _make_sample_pdf.py  sample.docx  sample_with_tables.xlsx
