[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DOCNEST-ai"
version = "0.1.0-alpha"
description = "The document normalization engine RAG has always needed"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "SynapseAI", email = "hello@github.com/tailorgunjan93/DOCNESTd" }]
keywords = [
    "rag", "document-ai", "nlp", "llm", "embeddings",
    "knowledge-base", "document-processing", "information-retrieval",
    "vector-search", "docling", "bm25"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "fastembed>=0.3",
    "litellm>=1.40",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
connectors = ["PyGithub>=2.3", "atlassian-python-api>=3.41"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
all = ["DOCNEST-ai[openai,connectors]"]

[project.scripts]
DOCNEST = "DOCNEST.cli:app"

[project.urls]
Homepage = "https://github.com/tailorgunjan93/DOCNESTd"
Documentation = "https://github.com/tailorgunjan93/DOCNESTd/blob/main/docs/SPEC_DOCNEST_PYPI.md"
Repository = "https://github.com/tailorgunjan93/DOCNESTd"
Issues = "https://github.com/tailorgunjan93/DOCNESTd/issues"
Changelog = "https://github.com/tailorgunjan93/DOCNESTd/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
