[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docnest"]

[project]
name = "docnest-ai"
version = "0.4.0"
description = "The document normalisation engine RAG has always needed"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "tailorgunjan93", email = "tailorgunjan89@gmail.com" }]
keywords = [
    "rag", "document-ai", "nlp", "llm", "embeddings",
    "knowledge-base", "document-processing", "information-retrieval",
    "vector-search", "docling", "bm25"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pydantic>=2.7",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.12",
    "mistletoe>=1.3",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# ── LLM providers (LangChain-based — install only the providers you use) ──────
# Core LangChain runtime (required for any LLM/embeddings provider)
llm = ["langchain-core>=0.3"]

# Individual provider packages — install the ones you need:
llm-groq       = ["langchain-groq>=0.2"]            # Groq cloud (fast, free tier)
llm-openai     = ["langchain-openai>=0.2"]           # OpenAI + Azure OpenAI
llm-anthropic  = ["langchain-anthropic>=0.3"]        # Anthropic Claude
llm-ollama     = ["langchain-ollama>=0.2"]           # Local Ollama
llm-google     = ["langchain-google-genai>=2.0"]     # Google Gemini / PaLM
llm-vertexai   = ["langchain-google-vertexai>=2.0"]  # Google Vertex AI
llm-bedrock    = ["langchain-aws>=0.2"]              # AWS Bedrock
llm-mistral    = ["langchain-mistralai>=0.2"]        # Mistral AI
llm-together   = ["langchain-together>=0.2"]         # Together AI
llm-cohere     = ["langchain-cohere>=0.3"]           # Cohere
llm-fireworks  = ["langchain-fireworks>=0.1"]        # Fireworks AI
llm-nvidia     = ["langchain-nvidia-ai-endpoints>=0.3"]  # NVIDIA NIM

# ── Embeddings ─────────────────────────────────────────────────────────────────
# Local sentence-transformers (free, no API key, runs offline after first download)
embeddings-local = [
    "sentence-transformers>=2.7",
    "langchain-huggingface>=0.1",
]
# Cloud embeddings (needs corresponding LLM provider package above)
embeddings-openai  = ["langchain-openai>=0.2"]
embeddings-google  = ["langchain-google-genai>=2.0"]
embeddings-cohere  = ["langchain-cohere>=0.3"]
embeddings-ollama  = ["langchain-ollama>=0.2"]

# ── Vector backends (optional — install only the one you want) ─────────────────
faiss  = ["faiss-cpu>=1.8"]          # Fast ANN search (FAISSVectorBackend)
chroma = ["chromadb>=0.5"]           # Persistent vector store (ChromaVectorBackend)

# ── OCR (optional) ─────────────────────────────────────────────────────────────
ocr-tesseract = ["pytesseract>=0.3"]
ocr-easyocr   = ["easyocr>=1.7"]
ocr           = ["pytesseract>=0.3"]   # default OCR extra

# ── Connectors ─────────────────────────────────────────────────────────────────
connectors = ["PyGithub>=2.3", "atlassian-python-api>=3.41"]

# ── Dev toolchain ──────────────────────────────────────────────────────────────
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "scikit-learn>=1.3",
]

# ── Convenience bundles ────────────────────────────────────────────────────────
# Quickstart: Groq + local HuggingFace embeddings (recommended for first-time use)
quickstart = [
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "sentence-transformers>=2.7",
    "langchain-huggingface>=0.1",
]
# All cloud providers (kitchen-sink — useful for hosted deployments)
all-providers = [
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-mistralai>=0.2",
]
all = ["docnest-ai[quickstart,connectors,faiss,ocr]"]

[project.scripts]
docnest = "docnest.cli:app"

[project.urls]
Homepage = "https://github.com/tailorgunjan93/DOCNESTd"
Documentation = "https://github.com/tailorgunjan93/DOCNESTd/blob/main/docs/SPEC_DOCNEST_PYPI.md"
Repository = "https://github.com/tailorgunjan93/DOCNESTd"
Issues = "https://github.com/tailorgunjan93/DOCNESTd/issues"
Changelog = "https://github.com/tailorgunjan93/DOCNESTd/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
